update resposive main

--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
             </ul>
         </nav>
     </header>
-    <main>
-        
+    <main class="container_main">
+        <div>
+            <h2>Aquarela</h2>
+            <p>Uma brincadeira com fotos , cores e efeitos, curta, compartilhe e deixe seu comentário, ficarei feliz pelo feedback.</p>
+        </div>
+        <section class="container_main_box">
+            <img src="./assets/dancer.jpeg" alt="" class="container_main--image">
+            <img src="./assets/play.jpeg" alt="" class="container_main--image">
+            <img src="./assets/tape.jpeg" alt="" class="container_main--image">
+            <img src="./assets/girl.jpeg" alt="" class="container_main--image">
+        </section>
+        <p>Veja Mais</p>
     </main>
 </body>
 </html>
